--- a/calculator.html
+++ b/calculator.html
@@ -20,12 +20,10 @@
     *, *:before, *:after {
       box-sizing: inherit;
     }
-
     .panels {
       min-height:100vh;
       overflow: hidden;
     }
-
     .panel {
       background:#6B0F9C;
       box-shadow:inset 0 0 0 5px rgba(255,255,255,0.1);
@@ -42,20 +40,16 @@
       background-size:cover;
       background-position:center;
     }
-
-
     .panel1 { background-image:url(https://source.unsplash.com/gYl-UtwNg_I/1500x1500); }
     .panel2 { background-image:url(https://source.unsplash.com/rFKUFzjPYiQ/1500x1500); }
     .panel3 { background-image:url(https://images.unsplash.com/photo-1465188162913-8fb5709d6d57?ixlib=rb-0.3.5&q=80&fm=jpg&crop=faces&cs=tinysrgb&w=1500&h=1500&fit=crop&s=967e8a713a4e395260793fc8c802901d); }
     .panel4 { background-image:url(https://source.unsplash.com/ITjiVXcwVng/1500x1500); }
     .panel5 { background-image:url(https://source.unsplash.com/3MNzGlQM7qs/1500x1500); }
-
     .panel > * {
       margin:0;
       width: 100%;
       transition:transform 0.5s;
     }
-
     .panel p {
       text-transform: uppercase;
       font-family: 'Amatic SC', cursive;
@@ -65,16 +59,13 @@
     .panel p:nth-child(2) {
       font-size: 4em;
     }
-
     .panel.open {
       font-size:40px;
     }
-
     button {
     	padding-right: 5px;
     	margin-right: 5px;
     }
-
   </style>
 
   <br><br><br>
@@ -83,9 +74,9 @@
     <div><input name="output"></button></div>
     <br>
     <div>
-      <button>9</button>
-      <button>8</button>
-      <button>7</button>
+      <input type="button" name="9" value="9">
+      <input type="button" name="8" value="8">
+      <input type="button" name="7" value="7">
     </div>
     <div>
       <button>6</button>
@@ -106,12 +97,21 @@
 
   <script>
 
-  const panels = document.querySelectorAll('button');
+    function handleCheck(e){
 
+      console.log(e);
 
-  $("panels").click(function(event) {
-    console.log("you clicked: ", this.innerHTML)
-  });
+    }
+
+      //const checkboxes = document.querySelectorAll('input[value]');
+      const checkboxes = document.querySelectorAll('input[type="button"]');
+
+      console.log(checkboxes);
+
+      //console.log(checkboxes);
+
+      checkboxes.forEach (button => button.addEventListener('click',handleCheck));
+
 
   </script>
 
