--- a/calculator.html
+++ b/calculator.html
@@ -2,15 +2,15 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Flex Panels</title>
-  <link href='https://fonts.googleapis.com/css?family=Amatic+SC' rel='stylesheet' type='text/css'>
+  <title>calculator</title>
+  <!-- <link href='https://fonts.googleapis.com/css?family=Amatic+SC' rel='stylesheet' type='text/css'> -->
 </head>
 <body>
   <style>
     html {
       box-sizing: border-box;
 /*      background:#ffc600;*/
-	  font-family:'helvetica neue';
+    font-family:'helvetica neue';
       font-size: 20px;
       font-weight: 200;
     }
@@ -20,99 +20,71 @@
     *, *:before, *:after {
       box-sizing: inherit;
     }
-    .panels {
-      min-height:100vh;
-      overflow: hidden;
-    }
-    .panel {
-      background:#6B0F9C;
-      box-shadow:inset 0 0 0 5px rgba(255,255,255,0.1);
-      color:white;
-      text-align: center;
-      align-items:center;
-      /* Safari transitionend event.propertyName === flex */
-      /* Chrome + FF transitionend event.propertyName === flex-grow */
-      transition:
-        font-size 0.7s cubic-bezier(0.61,-0.19, 0.7,-0.11),
-        flex 0.7s cubic-bezier(0.61,-0.19, 0.7,-0.11),
-        background 0.2s;
-      font-size: 20px;
-      background-size:cover;
-      background-position:center;
-    }
-    .panel1 { background-image:url(https://source.unsplash.com/gYl-UtwNg_I/1500x1500); }
-    .panel2 { background-image:url(https://source.unsplash.com/rFKUFzjPYiQ/1500x1500); }
-    .panel3 { background-image:url(https://images.unsplash.com/photo-1465188162913-8fb5709d6d57?ixlib=rb-0.3.5&q=80&fm=jpg&crop=faces&cs=tinysrgb&w=1500&h=1500&fit=crop&s=967e8a713a4e395260793fc8c802901d); }
-    .panel4 { background-image:url(https://source.unsplash.com/ITjiVXcwVng/1500x1500); }
-    .panel5 { background-image:url(https://source.unsplash.com/3MNzGlQM7qs/1500x1500); }
-    .panel > * {
-      margin:0;
-      width: 100%;
-      transition:transform 0.5s;
-    }
-    .panel p {
-      text-transform: uppercase;
-      font-family: 'Amatic SC', cursive;
-      text-shadow:0 0 4px rgba(0, 0, 0, 0.72), 0 0 14px rgba(0, 0, 0, 0.45);
-      font-size: 2em;
-    }
-    .panel p:nth-child(2) {
-      font-size: 4em;
-    }
-    .panel.open {
-      font-size:40px;
-    }
     button {
-    	padding-right: 5px;
-    	margin-right: 5px;
+      padding-right: 5px;
+      margin-right: 5px;
+    }
+    .btn{
+      color:black;
+
     }
   </style>
 
   <br><br><br>
 
   <div align="center">
-    <div><input name="output"></button></div>
+    <div><input type="text" id="here" value=""></p></div><!-- <input id="output" name="output"> -->
     <br>
     <div>
-      <input type="button" name="9" value="9">
-      <input type="button" name="8" value="8">
-      <input type="button" name="7" value="7">
+      <button class="btn">7</button>
+      <button class="btn">8</button>
+      <button class="btn">9</button>
     </div>
     <div>
-      <button>6</button>
-      <button>5</button>
-      <button>4</button>
+      <button class="btn">4</button>
+      <button class="btn">5</button>
+      <button class="btn">6</button>
     </div>
     <div>
-      <button>3</button>
-      <button>2</button>
-      <button>1</button>
+      <button class="btn">3</button>
+      <button class="btn">2</button>
+      <button class="btn">1</button>
     </div>
     <div>
-      <button>+</button>
-      <button>0</button>
-      <button>=</button>
+      <button class="btn">+</button>
+      <button class="btn">0</button>
+      <button class="btn">=</button>
+    </div>
+    <div>
+      <button class="btn">AC</button>
     </div>
   </div>
 
   <script>
+     function handleCheck(e){
+       //console.log(e);
+       //console.log(this.innerHTML);
+       document.getElementById("here").value = this.innerHTML;
 
-    function handleCheck(e){
-
-      console.log(e);
-
-    }
-
+       if(this.innerHTML == 'AC'){
+        document.getElementById("here").value = "";
+       }
+     }
       //const checkboxes = document.querySelectorAll('input[value]');
-      const checkboxes = document.querySelectorAll('input[type="button"]');
+      const numbers = document.querySelectorAll("button.btn");
+      console.log(numbers);
 
-      console.log(checkboxes);
-
-      //console.log(checkboxes);
-
-      checkboxes.forEach (button => button.addEventListener('click',handleCheck));
-
-
+      numbers.forEach (button => button.addEventListener('click',handleCheck));
+      // numbers.addEventListener('click', function(handleCheck)){
+      //   console.log(e);
+      // }
+      //checkboxes.forEach (button => button.addEventListener('click',handleCheck));
+      // checkboxes.forEach(function(element) {
+      //   console.log(element.innerHTML);
+      // });
+       // $(".btn").click(function(event) {
+       //     console.log("you clicked: ", this.innerHTML)
+       // });
   </script>
 
 
